# smart-completions

./: .gitignore  biome.json  opencode.json  package.json  plan.md  status.md  tsconfig.json  tsconfig.release.json
.opencode/: project-instructions.md
developer_rules/: fixes.md  fixes_done.md
docs/: additional_not_important.md  fixes.md  infra.md  lancedb.md  plugin_specification.md  rules.md  rust-zig-core-migration-idea.md  specs.md  test_model_matrix.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: check-no-legacy-nes.mjs  check-no-release-logs.mjs  copy-core-binary.mjs  strip-release-logs.mjs
smart-completions-core/: BUILD-REGULATION.md  Cargo.toml  clippy.toml  rustfmt.toml
smart-completions-core/crates/core-app/: Cargo.toml
smart-completions-core/crates/core-app/src/: completion.rs  handler.rs  lib.rs  server.rs
smart-completions-core/crates/core-app/tests/: fim_pilot.rs
smart-completions-core/crates/core-dispatch/: Cargo.toml
smart-completions-core/crates/core-dispatch/src/: cancellation.rs  dispatcher.rs  lib.rs
smart-completions-core/crates/core-dispatch/tests/: cancellation.rs
smart-completions-core/crates/core-documents/: Cargo.toml
smart-completions-core/crates/core-documents/src/: change.rs  error.rs  lib.rs  store.rs
smart-completions-core/crates/core-documents/tests/: document_store.rs
smart-completions-core/crates/core-edit-history/: Cargo.toml
smart-completions-core/crates/core-edit-history/src/: lib.rs
smart-completions-core/crates/core-edit-history/tests/: edit_history.rs
smart-completions-core/crates/core-ipc/: Cargo.toml  build.rs
smart-completions-core/crates/core-ipc/src/: connection.rs  framing.rs  lib.rs  protocol.rs  server.rs
smart-completions-core/crates/core-ipc/tests/: framing.rs  schema_codegen.rs  transport.rs  transport_windows.rs
smart-completions-core/crates/core-llama/: Cargo.toml
smart-completions-core/crates/core-llama/src/: embedding.rs  error.rs  generation.rs  lib.rs  rerank.rs
smart-completions-core/crates/core-llama/tests/: embedding_client.rs  generation_sse.rs  rerank_client.rs
smart-completions-core/crates/core-models/: Cargo.toml
smart-completions-core/crates/core-models/src/: lib.rs  registry.rs  traits.rs
smart-completions-core/crates/core-models/src/qwen25/: mod.rs
smart-completions-core/crates/core-models/src/sweep/: mod.rs
smart-completions-core/crates/core-models/tests/: qwen25_prompt.rs  sweep_prompt.rs
smart-completions-core/crates/core-retrieval/: Cargo.toml
smart-completions-core/crates/core-retrieval/src/: channels.rs  fusion.rs  lib.rs
smart-completions-core/crates/core-retrieval/tests/: channel_enum.rs  rrf.rs
smart-completions-core/crates/core-types/: Cargo.toml
smart-completions-core/crates/core-types/src/: lib.rs
smart-completions-core/crates/smart-completions-core-bin/: Cargo.toml
smart-completions-core/crates/smart-completions-core-bin/src/: handler.rs  main.rs
smart-completions-core/schema/: control.fbs  envelope.fbs  stream.fbs
src/browser/: commands.ts  proxies.ts  smart-completions-frontend-module.ts
src/common/: edit-history-types.ts  editor-dto.ts  embedding-types.ts  fim-types.ts  mode-types.ts  model-types.ts  nes-types.ts  protocol.ts
src/node/: smart-completions-backend-module.ts
src/node/util/: crlf.ts  (+1 more)
test/: aixcoder-battlefield.integration.test.ts  aixcoder-channel-composite.test.ts  aixcoder-header.test.ts  aixcoder-live.integration.test.ts  aixcoder-prompt.test.ts  aixcoder-token-healthcheck.test.ts  aixcoder-trim.test.ts  battlefield.integration.test.ts  bm25.test.ts  chromadb-store.integration.test.ts  chunk-meta.test.ts  core-document-sync.test.ts  core-frames.test.ts  core-process-manager.test.ts  core-request-mapping.test.ts  core-wire-protocol.test.ts  crlf.test.ts  diagnostics-delta.test.ts  edit-history-store.test.ts  embed-model-name.test.ts  embedding-chroma-e2e.integration.test.ts  embedding-live-rag.integration.test.ts  embedding-service.integration.test.ts  fim-battlefield.integration.test.ts  fim-bracket-balance.test.ts  fim-channel-composite.test.ts  fim-completion-cache.test.ts  fim-edit-history.test.ts  fim-embedder.test.ts  fim-live.integration.test.ts  fim-postprocess.test.ts  fim-prompt.test.ts  fim-repo-prompt.test.ts  fim-trim.test.ts  granite-battlefield.integration.test.ts  granite-line-comment.test.ts  granite-repo-prompt.test.ts  hash.test.ts  ignore.test.ts  lancedb-store.integration.test.ts  (+46 more)
test/fixtures/: aixcoder-canonical-psm-prompt.txt  aixcoder-canonical-spm-prompt.txt  fim-canonical-repo-prompt.txt  granite-canonical-repo-prompt.txt  seed-canonical-fim-prompt.txt  seed-repo-prompt.txt  zeta-canonical-prompt.txt
test/helpers/: aixcoder-lancedb-reset.ts  fim-lancedb-reset.ts  granite-lancedb-reset.ts  seed-lancedb-reset.ts  zeta-lancedb-reset.ts
test_battlefield/repo/: order-service.ts  pricing.ts  types.ts  user-repository.ts  user-service.ts
test_results/: seed-battlefield-1782553769244.md  zeta-battlefield-1782554647609.md
test_results/2026-06-25T10-39-44-873Z__embed-granite-embedding-311M__db-lancedb__fim-granite-4.1-8b__nes-sweep-default/: endpoints.json  report.md
test_results/2026-06-25T10-40-46-794Z__embed-granite-embedding-311M__db-lancedb__fim-none__nes-zeta-2.1/: endpoints.json  report.md
test_results/2026-06-25T10-41-31-333Z__embed-granite-embedding-311M__db-lancedb__fim-none__nes-sweep-small/: report.md
test_results/2026-06-25T10-42-58-958Z__embed-granite-embedding-311M__db-lancedb__fim-none__nes-sweep-small/: endpoints.json  report.md  retrieval_results.json
test_results/2026-06-25T10-44-12-318Z__embed-jina-code-embeddings-1.5b__db-lancedb__fim-granite-4.1-8b__nes-sweep-small/: endpoints.json  report.md
test_results/2026-06-25T10-44-41-355Z__embed-jina-code-embeddings-1.5b__db-chromadb__fim-granite-4.1-8b__nes-sweep-small/: endpoints.json  report.md
test_results/2026-06-25T10-45-58-321Z__embed-jina-code-embeddings-1.5b__db-lancedb__fim-qwen2.5-coder__nes-none/: endpoints.json  report.md
(+365 files in other folders)
