[package]
name = "core-documents"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
core-edit-history = { path = "../core-edit-history" }
core-types = { path = "../core-types" }
thiserror.workspace = true

[lints]
workspace = true
