[package]
name = "core-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
bytes.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
planus.workspace = true
core-types = { path = "../core-types" }

[build-dependencies]
planus-translation.workspace = true
planus-codegen.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net", "time"] }
planus.workspace = true

[lints]
workspace = true
