[package]
name = "smart-completions-core-bin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "smart-completions-core"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
core-app = { path = "../core-app" }
core-llama = { path = "../core-llama" }

[lints]
workspace = true
